ChangeLog for herdstat

2005-04-02 Aaron Walker <ka0ttic@gentoo.org>

	* src/metadatas.cc: Fixed bug where new timestamp isnt copied when
	md5sum fails.
	* src/action_meta_handler.cc: Don't display colors in the ambigous
	package warning when --quiet.
	* src/action_pkg_handler.cc: Fix bug where first package of list was
	displayed when --count was specified.

2005-04-01 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.0.2 release).
	* src/metadatas.cc: If $PORTDIR/metadata/timestamp exists, dont
	re-cache the metadata.xml list until it changes.
	* src/util.cc, src/util.hh: Modified get_ebuild_var() to handle
	HOMEPAGE specially, doing variable substituion in an attempt to
	produce readable HOMEPAGE output.  Also added a plural version of
	get_var(), get_vars() since it's not practical to open the same file
	many times.  Added md5check().
	* src/action_meta_handler.cc: Instead of throwing an instance of
	args_usage_E if -m is specified w/no non-opt args, print a message
	telling the user they must be in a package directory or category.
	Added a few comments.  Added --quiet support for pythonhead.
	* src/action_pkg_handler.cc: Fixed bug where first package was
	displayed w/no color while the rest were blue when --verbose.

2005-03-31 Aaron Walker <ka0ttic@gentoo.org>

	* src/categories.hh: Added new categories_T class.
	* src/metadatas.cc: Modified to use new categories_T.
	* src/action_meta_handler.cc: Display ebuild's DESCRIPTION and
	HOMEPAGE even if no metadata.xml exists.  Allow user to run 'herdstat
	-m' with no non-opt args *IF* in a package directory or category.
	* src/exceptions.hh: Added errno_error_E and modified bad_fileobject_E
	to derive from it.
	* src/util.cc, src/util.hh: Added getcwd(). Moved get_categories() to
	it's own categories_T class.

2005-03-30 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in, bashcomp: Added --with-herd.
	* src/util.cc, src/util.hh: Added a generic get_var() for retrieving