@@ -1,8 +1,11 @@
-<!-- Automagically generated by the ToDo program on 04/03/05, 01:50 -->
+<!-- Automagically generated by the ToDo program on 04/03/05, 16:22 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
+    <note priority="veryhigh" time="1112559763">
+        Maybe write valid() and fill() methods for cache_T? some kind of function pointer or function object?
+    </note>
     <note priority="medium" time="1112411396">
         Fix bug where status is printed if -pq is specified.
     </note>
